smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/operations/invalid-operation-properties.smithy
// Unknown property invalidOperationKey for com.example#Operation
$version: "2.0"
namespace com.example

operation Operation {
    invalidOperationKey: String
}
